--- a/storefront-site/html/user-preferences-change-email-subscription.html
+++ b/storefront-site/html/user-preferences-change-email-subscription.html
@@ -47,43 +47,43 @@
     </header>
     <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
     <!-- END HEADER -->
-
-    <div class="preferences-outer-container">
-        <nav class="hierarchical-nav">
-            <a href="./user-preferences.html">Your Account</a>
-            &nbsp;>&nbsp;
-            <a href="./user-preferences.html">Preferences</a>
-            &nbsp;>&nbsp;
-            <b>Change Email Subscriptions</b>
-        </nav>
-        <h1>Change Email Subscriptions</h1>
-        <form class="preferences-form" action="./user-preferences.html">
-            <div class="preferences-form-section">
-                Use the form below to change the email subscriptions for your account.
-                <br>
-                <br>
-                <label for="newsletter"><b>Subscribe to Newsletter</b></label>
-                <br>
-                <input type="checkbox" name="newsletter" checked>Newsletter
-                <br>
-                <label for="promotions"><b>Subscribe to Promotions</b></label>
-                <br>
-                <input type="checkbox" name="promotions" checked>Promotions
-                <br>
-                <label for="reminders"><b>Subscribe to Reminders</b></label>
-                <br>
-                <input type="checkbox" name="reminders" checked>Reminders
-                <br>
-                <a href="../index.html">
-                    <button type="submit" class="submit-button">Save Changes</button>
-                </a>
-                <br>
-                <br>
-                <a href="./user-preferences-change-email-subscription.html">Unsubscribe from all</a>
-            </div>
-        </form>
-    </div>
-
+    <main>
+        <div class="preferences-outer-container">
+            <nav class="hierarchical-nav">
+                <a href="./user-preferences.html">Your Account</a>
+                &nbsp;>&nbsp;
+                <a href="./user-preferences.html">Preferences</a>
+                &nbsp;>&nbsp;
+                <b>Change Email Subscriptions</b>
+            </nav>
+            <h1>Change Email Subscriptions</h1>
+            <form class="preferences-form" action="./user-preferences.html">
+                <div class="preferences-form-section">
+                    Use the form below to change the email subscriptions for your account.
+                    <br>
+                    <br>
+                    <label for="newsletter"><b>Subscribe to Newsletter</b></label>
+                    <br>
+                    <input type="checkbox" name="newsletter" checked>Newsletter
+                    <br>
+                    <label for="promotions"><b>Subscribe to Promotions</b></label>
+                    <br>
+                    <input type="checkbox" name="promotions" checked>Promotions
+                    <br>
+                    <label for="reminders"><b>Subscribe to Reminders</b></label>
+                    <br>
+                    <input type="checkbox" name="reminders" checked>Reminders
+                    <br>
+                    <a href="../index.html">
+                        <button type="submit" class="submit-button">Save Changes</button>
+                    </a>
+                    <br>
+                    <br>
+                    <a href="./user-preferences-change-email-subscription.html">Unsubscribe from all</a>
+                </div>
+            </form>
+        </div>
+    </main>
     <!-- BEGIN FOOTER -->
     <footer>
         <div class="footer-nav-container">
