--- a/storefront-site/html/user-preferences.html
+++ b/storefront-site/html/user-preferences.html
@@ -47,56 +47,56 @@
     </header>
     <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
     <!-- END HEADER -->
-
-    <div class="preferences-outer-container">
-        <nav class="hierarchical-nav">
-            <a href="./user-preferences.html">Your Account</a>
-            &nbsp;>&nbsp;
-            <b>Preferences</b>
-        </nav>
-        <h1>Preferences</h1>
-        <div class="preferences-form">
-            <div class="preferences-form-section">
-                <a href="./user-preferences-change-name.html">
-                    <button type="button">Edit</button>
-                </a>
-                <b>Name:</b>
-                <br>
-                John Doe
+    <main>
+        <div class="preferences-outer-container">
+            <nav class="hierarchical-nav">
+                <a href="./user-preferences.html">Your Account</a>
+                &nbsp;>&nbsp;
+                <b>Preferences</b>
+            </nav>
+            <h1>Preferences</h1>
+            <div class="preferences-form">
+                <div class="preferences-form-section">
+                    <a href="./user-preferences-change-name.html">
+                        <button type="button">Edit</button>
+                    </a>
+                    <b>Name:</b>
+                    <br>
+                    John Doe
+                </div>
+                <hr>
+                <div class="preferences-form-section">
+                    <a href="./user-preferences-change-email.html">
+                        <button type="button">Edit</button>
+                    </a>
+                    <b>Email:</b>
+                    <br>
+                    example@example.com
+                </div>
+                <hr>
+                <div class="preferences-form-section">
+                    <a href="./user-preferences-change-password.html">
+                        <button type="button">Edit</button>
+                    </a>
+                    <b>Password:</b>
+                    <br>
+                    ********
+                </div>
+                <hr>
+                <div class="preferences-form-section">
+                    <a href="./user-preferences-change-email-subscription.html">
+                        <button type="button">Edit</button>
+                    </a>
+                    <b>Email Subscriptions:</b>
+                    <br>
+                    <span style="color: #505050;">Manage your email subscription preferences</span>
+                </div>
             </div>
-            <hr>
-            <div class="preferences-form-section">
-                <a href="./user-preferences-change-email.html">
-                    <button type="button">Edit</button>
-                </a>
-                <b>Email:</b>
-                <br>
-                example@example.com
-            </div>
-            <hr>
-            <div class="preferences-form-section">
-                <a href="./user-preferences-change-password.html">
-                    <button type="button">Edit</button>
-                </a>
-                <b>Password:</b>
-                <br>
-                ********
-            </div>
-            <hr>
-            <div class="preferences-form-section">
-                <a href="./user-preferences-change-email-subscription.html">
-                    <button type="button">Edit</button>
-                </a>
-                <b>Email Subscriptions:</b>
-                <br>
-                <span style="color: #505050;">Manage your email subscription preferences</span>
-            </div>
+            <a href="../index.html">
+                <button type="button" class="preferences-done-button">Done</button>
+            </a>
         </div>
-        <a href="../index.html">
-            <button type="button" class="preferences-done-button">Done</button>
-        </a>
-    </div>
-
+    </main>
     <!-- BEGIN FOOTER -->
     <footer>
         <div class="footer-nav-container">
