--- a/storefront-site/html/aboutus.html
+++ b/storefront-site/html/aboutus.html
@@ -12,52 +12,60 @@
     <link rel="stylesheet" href="../styles/aboutus.css">
     <link rel="stylesheet" href="../styles/footer.css">
 </head>
- <!-- BEGIN HEADER -->
- <header>
-    <div class="logo-container">
-        <a href="../index.html">
-            <img src="../images/logo-transparent.png" class="logo" alt="Pandemic Essentials Logo">
-        </a>
-    </div>
-    <form class="search-form">
-        <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
-    </form>
-    <nav class="header-nav">
-        <a href="./cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart</a>
-        <a href="./user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span>
-            Preferences</a>
-        <div class="header-login-dropdown">
-            <a href="./login.html" class="header-nav-link">Sign In ▼</a>
-            <nav class="header-login-dropdown-content">
-                <div>
-                    <div class="header-login-dropdown-flex">
-                        <a href="./login.html">Sign In <span class="material-icons"
-                                style="font-size: 16px;">login</span></a>
-                        <a href="./register.html">Register <span class="material-icons"
-                                style="font-size: 16px;">person_add</span></a>
-                        <a href="../index.html">Log Out <span class="material-icons"
-                                style="font-size: 16px;">logout</span></a>
-                    </div>
-                </div>
-            </nav>
+
+<body class="about-us">
+    <!-- BEGIN HEADER -->
+    <header>
+        <div class="logo-container">
+            <a href="../index.html">
+                <img src="../images/logo-transparent.png" class="logo" alt="Pandemic Essentials Logo">
+            </a>
         </div>
-    </nav>
-</header>
-<hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
-<!-- END HEADER -->
-<body class="about-us">  
-    <div class="what-we-do">
-    <h2>What We Do</h2>
-    <p>We know this is a stressful time, which is why we have created this organization to help you find and buy essential supplies. We know how important health and safety is for you and your family. We have made the process of buying pandemic supplies easy and fast! We started in 2019 as a response to the COVID-19 Pandemic. As we reach the light at the end of the tunnel it is important to remember be prepared for future pandemics. We hope you'll choose us for your current and future pandemic essential needs! If you have any questions feel free to email us at pandemic-essentials@example.com.
-    </p>
-    </div>
-    <h2 class="meet">Meet the Team</h2>
-    <div class="team">
-        <div class="head-shot"><img src="../images/Jasneil.jpg" width="200px"></div>
-        <div class="head-shot"><img src="../images/Jinal.jpg" width="200px"></div>
-        <div class="head-shot"><img src="../images/Oliver.jpg" width="200px"></div>
-        <div class="head-shot"><img src="../images/Jingxing.jpg" width="200px"></div>
-    </div>
+        <form class="search-form">
+            <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
+        </form>
+        <nav class="header-nav">
+            <a href="./cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart</a>
+            <a href="./user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span>
+                Preferences</a>
+            <div class="header-login-dropdown">
+                <a href="./login.html" class="header-nav-link">Sign In ▼</a>
+                <nav class="header-login-dropdown-content">
+                    <div>
+                        <div class="header-login-dropdown-flex">
+                            <a href="./login.html">Sign In <span class="material-icons"
+                                    style="font-size: 16px;">login</span></a>
+                            <a href="./register.html">Register <span class="material-icons"
+                                    style="font-size: 16px;">person_add</span></a>
+                            <a href="../index.html">Log Out <span class="material-icons"
+                                    style="font-size: 16px;">logout</span></a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </nav>
+    </header>
+    <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
+    <!-- END HEADER -->
+    <main>
+        <div class="what-we-do">
+            <h2>What We Do</h2>
+            <p>We know this is a stressful time, which is why we have created this organization to help you find and buy
+                essential supplies. We know how important health and safety is for you and your family. We have made the
+                process of buying pandemic supplies easy and fast! We started in 2019 as a response to the COVID-19
+                Pandemic. As we reach the light at the end of the tunnel it is important to remember be prepared for future
+                pandemics. We hope you'll choose us for your current and future pandemic essential needs! If you have any
+                questions feel free to email us at pandemic-essentials@example.com.
+            </p>
+        </div>
+        <h2 class="meet">Meet the Team</h2>
+        <div class="team">
+            <div class="head-shot"><img src="../images/Jasneil.jpg" width="200px"></div>
+            <div class="head-shot"><img src="../images/Jinal.jpg" width="200px"></div>
+            <div class="head-shot"><img src="../images/Oliver.jpg" width="200px"></div>
+            <div class="head-shot"><img src="../images/Jingxing.jpg" width="200px"></div>
+        </div>
+    </main>
     <!-- BEGIN FOOTER -->
     <footer>
         <div class="footer-nav-container">
