--- a/storefront-site/html/confirmation.html
+++ b/storefront-site/html/confirmation.html
@@ -50,86 +50,88 @@
     </header>
     <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
     <!-- END HEADER -->
-    <div class="confirmation-main-container">
-        <div class="progress-container">
-            <div class="progress-inner-container">
-                <div class="progress">
-                    <div class="progress-cart">
-                        <div class="progress-step">
-                            <div>
-                                <span class="material-icons" style="color: #007600">check_box</span>
-                            </div>
-                            <div>
-                                <b>Review Cart</b>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="progress-payment">
-                        <div class="progress-step">
-                            <div>
-                                <span class="material-icons" style="color: #007600">check_box</span>
-                            </div>
-                            <div>
-                                <b>Checkout</b>
+    <main>
+        <div class="confirmation-main-container">
+            <div class="progress-container">
+                <div class="progress-inner-container">
+                    <div class="progress">
+                        <div class="progress-cart">
+                            <div class="progress-step">
+                                <div>
+                                    <span class="material-icons" style="color: #007600">check_box</span>
+                                </div>
+                                <div>
+                                    <b>Review Cart</b>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="progress-confirmation">
-                        <div class="progress-step">
-                            <div>
-                                <span class="material-icons" style="color: #007600">check_box</span>
+                        <div class="progress-payment">
+                            <div class="progress-step">
+                                <div>
+                                    <span class="material-icons" style="color: #007600">check_box</span>
+                                </div>
+                                <div>
+                                    <b>Checkout</b>
+                                </div>
                             </div>
-                            <div>
-                                <b>Confirmation</b>
+                        </div>
+                        <div class="progress-confirmation">
+                            <div class="progress-step">
+                                <div>
+                                    <span class="material-icons" style="color: #007600">check_box</span>
+                                </div>
+                                <div>
+                                    <b>Confirmation</b>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="confirmation-confirm-container">
+                <h1><b>Thank you for your purchase!</b></h1>
+                <br>
+                <b>Estimated delivery: 2 weeks</b>
+                <br>
+                You will recieve an email with your tracking number soon.
+                <br>
+                <br>
+                <br>
+                <a href="../index.html">Back to Homepage</a>
+                <br><br><br>
+            </div>
         </div>
-        <div class="confirmation-confirm-container">
-            <h1><b>Thank you for your purchase!</b></h1>
-            <br>
-            <b>Estimated delivery: 2 weeks</b>
-            <br>
-            You will recieve an email with your tracking number soon.
-            <br>
-            <br>
-            <br>
-            <a href="../index.html">Back to Homepage</a>
-            <br><br><br>
+        <div class="outer-grid-product-listings">
+            <h2>Recommended Products For You</h2>
+            <div class="other-products">
+                <a href="./products/product.html?id=4">
+                    <div class="product-listing">
+                        <img src="../images/product4.png" alt="Product Image">
+                    </div>
+                </a>
+                <a href="./products/product.html?id=5">
+                    <div class="product-listing">
+                        <img src="../images/product5.png" alt="Product Image">
+                    </div>
+                </a>
+                <a href="./products/product.html?id=6">
+                    <div class="product-listing">
+                        <img src="../images/product6.png" alt="Product Image">
+                    </div>
+                </a>
+                <a href="./products/product.html?id=7">
+                    <div class="product-listing">
+                        <img src="../images/product7.png" alt="Product Image">
+                    </div>
+                </a>
+                <a href="./products/product.html?id=10">
+                    <div class="product-listing">
+                        <img src="../images/product10.png" alt="Product Image">
+                    </div>
+                </a>
+            </div>
         </div>
-    </div>
-    <div class="outer-grid-product-listings">
-        <h2>Recommended Products For You</h2>
-        <div class="other-products">
-            <a href="./products/product.html?id=4">
-                <div class="product-listing">
-                    <img src="../images/product4.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./products/product.html?id=5">
-                <div class="product-listing">
-                    <img src="../images/product5.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./products/product.html?id=6">
-                <div class="product-listing">
-                    <img src="../images/product6.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./products/product.html?id=7">
-                <div class="product-listing">
-                    <img src="../images/product7.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./products/product.html?id=10">
-                <div class="product-listing">
-                    <img src="../images/product10.png" alt="Product Image">
-                </div>
-            </a>
-        </div>
-    </div>
+    </main>
     <!-- Footer, hyperlink is set up, need a return page -->
     <footer>
         <div class="footer-nav-container">
