--- a/storefront-site/html/returns.html
+++ b/storefront-site/html/returns.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/privacy-policy.css">
     <link rel="stylesheet" href="../styles/footer.css">
-    <link rel="stylesheet" href="../styles/returns.css">
 </head>
 <body>
     <!-- BEGIN HEADER -->
@@ -47,42 +46,44 @@
     </header>
     <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
     <!-- END HEADER -->
-    <div class="grid-container">
-        <div class="sidebar">
-            <nav class="sidebar-nav">
-                <span style="font-size: 1.2em;">Information</span>
-                <hr>
-                <ul>
-                    <li>
-                        <a href="./faq.html">FAQ</a>
-                    </li>
-                    <li>
-                        <a href="./locations.html">Locations and Hours</a>
-                    </li>
-                    <li>
-                        <b>Return Policy</b>
-                    </li>
-                    <li>
-                        <a href="./shipping.html">Shipping</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <main class="returns">
-            <div>
-                <h1>Return Policy</h1>
-                <br>
-                <p>Thank for shopping at Pandemic Essentials. If you are not 100% satisfied with your purchase we can
-                    help.</p>
-                <h2>Returns</h2>
-                <p>You have 30 days to return an unopen and unused item from the date you received it. It must be in the
-                    original packaging with the receipt.</p>
-                <p>You are responsible for the cost of shipping. All shipping costs are non refundable.</p>
-                <h3>Refunds</h3>
-                <p>We will notify you upon receiving the order. If approved, you will receive credit.</p>
+    <main>
+        <div class="grid-container">
+            <div class="sidebar">
+                <nav class="sidebar-nav">
+                    <span style="font-size: 1.2em;">Information</span>
+                    <hr>
+                    <ul>
+                        <li>
+                            <a href="./faq.html">FAQ</a>
+                        </li>
+                        <li>
+                            <a href="./locations.html">Locations and Hours</a>
+                        </li>
+                        <li>
+                            <b>Return Policy</b>
+                        </li>
+                        <li>
+                            <a href="./shipping.html">Shipping</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-        </main>
-    </div>
+            <div class="returns">
+                <div>
+                    <h1>Return Policy</h1>
+                    <br>
+                    <p>Thank for shopping at Pandemic Essentials. If you are not 100% satisfied with your purchase we can
+                        help.</p>
+                    <h2>Returns</h2>
+                    <p>You have 30 days to return an unopen and unused item from the date you received it. It must be in the
+                        original packaging with the receipt.</p>
+                    <p>You are responsible for the cost of shipping. All shipping costs are non refundable.</p>
+                    <h3>Refunds</h3>
+                    <p>We will notify you upon receiving the order. If approved, you will receive credit.</p>
+                </div>
+            </div>
+        </div>
+    </main>
     <!-- BEGIN FOOTER -->
     <footer>
         <div class="footer-nav-container">
