--- a/storefront-site/html/user-preferences-change-name.html
+++ b/storefront-site/html/user-preferences-change-name.html
@@ -47,32 +47,32 @@
     </header>
     <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
     <!-- END HEADER -->
-
-    <div class="preferences-outer-container">
-        <nav class="hierarchical-nav">
-            <a href="./user-preferences.html">Your Account</a>
-            &nbsp;>&nbsp;
-            <a href="./user-preferences.html">Preferences</a>
-            &nbsp;>&nbsp;
-            <b>Change Name</b>
-        </nav>
-        <h1>Change Name</h1>
-        <form class="preferences-form" action="./user-preferences.html">
-            <div class="preferences-form-section">
-                Use the form below to change the name for your account.
-                <br>
-                <br>
-                <label for="name"><b>New name</b></label>
-                <br>
-                <input type="text" name="name" value="John Doe" required autofocus>
-                <br>
-                <a href="../index.html">
-                    <button type="submit" class="submit-button">Save Changes</button>
-                </a>
-            </div>
-        </form>
-    </div>
-
+    <main>
+        <div class="preferences-outer-container">
+            <nav class="hierarchical-nav">
+                <a href="./user-preferences.html">Your Account</a>
+                &nbsp;>&nbsp;
+                <a href="./user-preferences.html">Preferences</a>
+                &nbsp;>&nbsp;
+                <b>Change Name</b>
+            </nav>
+            <h1>Change Name</h1>
+            <form class="preferences-form" action="./user-preferences.html">
+                <div class="preferences-form-section">
+                    Use the form below to change the name for your account.
+                    <br>
+                    <br>
+                    <label for="name"><b>New name</b></label>
+                    <br>
+                    <input type="text" name="name" value="John Doe" required autofocus>
+                    <br>
+                    <a href="../index.html">
+                        <button type="submit" class="submit-button">Save Changes</button>
+                    </a>
+                </div>
+            </form>
+        </div>
+    </main>
     <!-- BEGIN FOOTER -->
     <footer>
         <div class="footer-nav-container">
