--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -46,144 +46,144 @@
     </header>
     <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
     <!-- END HEADER -->
-
-    <div class="homepage-banner-container">
-        <div class="homepage-banner">
-            <img src="images/banner-text.png" alt="Homepage Welcome Banner">
+    <main>
+        <div class="homepage-banner-container">
+            <div class="homepage-banner">
+                <img src="images/banner-text.png" alt="Homepage Welcome Banner">
+            </div>
         </div>
-    </div>
-    <div class="featured-products-container">
-        <div class="featured-product-container">
-            <div class="featured-product-content">
-                <h2>Currently Popular</h2>
+        <div class="featured-products-container">
+            <div class="featured-product-container">
+                <div class="featured-product-content">
+                    <h2>Currently Popular</h2>
+                    <a href="./html/products/product.html?id=1">
+                        <div class="featured-product">
+                            <img src="./images/product1.png" alt="Currently Popular Product">
+                        </div>
+                    </a>
+                    <span><a href="./html/products/product.html?id=1">See More</a></span>
+                </div>
+            </div>
+            <div class="featured-product-container">
+                <div class="featured-product-content">
+                    <h2>On Sale</h2>
+                    <a href="./html/products/product.html?id=12">
+                        <div class="featured-product">
+                            <img src="./images/product12.png" alt="On Sale Product">
+                        </div>
+                    </a>
+                    <span><a href="./html/products/product.html?id=12">View Sale</a></span>
+                </div>
+            </div>
+            <div class="featured-product-container">
+                <div class="featured-product-content">
+                    <h2>Highest Rating</h2>
+                    <a href="./html/products/product.html?id=14">
+                        <div class="featured-product">
+                            <img src="./images/product14.png" alt="Highest Rated Product">
+                        </div>
+                    </a>
+                    <span><a href="./html/products/product.html?id=14">See More</a></span>
+                </div>
+            </div>
+            <div class="featured-product-container">
+                <div class="featured-product-content">
+                    <h2>Under $20</h2>
+                    <a href="./html/products/product.html?id=16">
+                        <div class="featured-product">
+                            <img src="./images/product16.png" alt="Under $20 Product">
+                        </div>
+                    </a>
+                    <span><a href="./html/products/product.html?id=16">Shop Under $20</a></span>
+                </div>
+            </div>
+        </div>
+        <div class="outer-grid-product-listings">
+            <h2>Browse our full selection of products</h2>
+            <div class="inner-grid-product-listings">
                 <a href="./html/products/product.html?id=1">
-                    <div class="featured-product">
-                        <img src="./images/product1.png" alt="Currently Popular Product">
+                    <div class="product-listing">
+                        <img src="./images/product1.png" alt="Product Image">
                     </div>
                 </a>
-                <span><a href="./html/products/product.html?id=1">See More</a></span>
-            </div>
-        </div>
-        <div class="featured-product-container">
-            <div class="featured-product-content">
-                <h2>On Sale</h2>
+                <a href="./html/products/product.html?id=2">
+                    <div class="product-listing">
+                        <img src="./images/product2.png" alt="Product Image">
+                    </div>
+                </a>
+                <a href="./html/products/product.html?id=3">
+                    <div class="product-listing">
+                        <img src="./images/product3.png" alt="Product Image">
+                    </div>
+                </a>
+                <a href="./html/products/product.html?id=4">
+                    <div class="product-listing">
+                        <img src="./images/product4.png" alt="Product Image">
+                    </div>
+                </a>
+                <a href="./html/products/product.html?id=5">
+                    <div class="product-listing">
+                        <img src="./images/product5.png" alt="Product Image">
+                    </div>
+                </a>
+                <a href="./html/products/product.html?id=6">
+                    <div class="product-listing">
+                        <img src="./images/product6.png" alt="Product Image">
+                    </div>
+                </a>
+                <a href="./html/products/product.html?id=7">
+                    <div class="product-listing">
+                        <img src="./images/product7.png" alt="Product Image">
+                    </div>
+                </a>
+                <a href="./html/products/product.html?id=8">
+                    <div class="product-listing">
+                        <img src="./images/product8.png" alt="Product Image">
+                    </div>
+                </a>
+                <a href="./html/products/product.html?id=9">
+                    <div class="product-listing">
+                        <img src="./images/product9.png" alt="Product Image">
+                    </div>
+                </a>
+                <a href="./html/products/product.html?id=10">
+                    <div class="product-listing">
+                        <img src="./images/product10.png" alt="Product Image">
+                    </div>
+                </a>
+                <a href="./html/products/product.html?id=11">
+                    <div class="product-listing">
+                        <img src="./images/product11.png" alt="Product Image">
+                    </div>
+                </a>
                 <a href="./html/products/product.html?id=12">
-                    <div class="featured-product">
-                        <img src="./images/product12.png" alt="On Sale Product">
+                    <div class="product-listing">
+                        <img src="./images/product12.png" alt="Product Image">
                     </div>
                 </a>
-                <span><a href="./html/products/product.html?id=12">View Sale</a></span>
-            </div>
-        </div>
-        <div class="featured-product-container">
-            <div class="featured-product-content">
-                <h2>Highest Rating</h2>
+                <a href="./html/products/product.html?id=13">
+                    <div class="product-listing">
+                        <img src="./images/product13.png" alt="Product Image">
+                    </div>
+                </a>
                 <a href="./html/products/product.html?id=14">
-                    <div class="featured-product">
-                        <img src="./images/product14.png" alt="Highest Rated Product">
+                    <div class="product-listing">
+                        <img src="./images/product14.png" alt="Product Image">
                     </div>
                 </a>
-                <span><a href="./html/products/product.html?id=14">See More</a></span>
-            </div>
-        </div>
-        <div class="featured-product-container">
-            <div class="featured-product-content">
-                <h2>Under $20</h2>
+                <a href="./html/products/product.html?id=15">
+                    <div class="product-listing">
+                        <img src="./images/product15.png" alt="Product Image">
+                    </div>
+                </a>
                 <a href="./html/products/product.html?id=16">
-                    <div class="featured-product">
-                        <img src="./images/product16.png" alt="Under $20 Product">
+                    <div class="product-listing">
+                        <img src="./images/product16.png" alt="Product Image">
                     </div>
                 </a>
-                <span><a href="./html/products/product.html?id=16">Shop Under $20</a></span>
             </div>
         </div>
-    </div>
-    <div class="outer-grid-product-listings">
-        <h2>Browse our full selection of products</h2>
-        <div class="inner-grid-product-listings">
-            <a href="./html/products/product.html?id=1">
-                <div class="product-listing">
-                    <img src="./images/product1.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./html/products/product.html?id=2">
-                <div class="product-listing">
-                    <img src="./images/product2.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./html/products/product.html?id=3">
-                <div class="product-listing">
-                    <img src="./images/product3.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./html/products/product.html?id=4">
-                <div class="product-listing">
-                    <img src="./images/product4.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./html/products/product.html?id=5">
-                <div class="product-listing">
-                    <img src="./images/product5.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./html/products/product.html?id=6">
-                <div class="product-listing">
-                    <img src="./images/product6.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./html/products/product.html?id=7">
-                <div class="product-listing">
-                    <img src="./images/product7.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./html/products/product.html?id=8">
-                <div class="product-listing">
-                    <img src="./images/product8.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./html/products/product.html?id=9">
-                <div class="product-listing">
-                    <img src="./images/product9.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./html/products/product.html?id=10">
-                <div class="product-listing">
-                    <img src="./images/product10.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./html/products/product.html?id=11">
-                <div class="product-listing">
-                    <img src="./images/product11.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./html/products/product.html?id=12">
-                <div class="product-listing">
-                    <img src="./images/product12.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./html/products/product.html?id=13">
-                <div class="product-listing">
-                    <img src="./images/product13.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./html/products/product.html?id=14">
-                <div class="product-listing">
-                    <img src="./images/product14.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./html/products/product.html?id=15">
-                <div class="product-listing">
-                    <img src="./images/product15.png" alt="Product Image">
-                </div>
-            </a>
-            <a href="./html/products/product.html?id=16">
-                <div class="product-listing">
-                    <img src="./images/product16.png" alt="Product Image">
-                </div>
-            </a>
-        </div>
-    </div>
-
+    </main>
     <!-- BEGIN FOOTER -->
     <footer>
         <div class="footer-nav-container">
