Dynamically display "Other Products"

--- a/storefront-site/html/products/product.html
+++ b/storefront-site/html/products/product.html
@@ -85,11 +85,10 @@
             <br>
             <br>
             <h2>Other Products:</h2>
-            <div class="other-products">
-                <div><a href="./product.html?id=15"><img src="../../images/product15.png" style="max-width: 128px; max-height: 128px;"></a></div>
-                <div><a href="./product.html?id=16"><img src="../../images/product16.png" style="max-width: 128px; max-height: 128px;"></a></div>
-                <div><a href="./product.html?id=2"><img src="../../images/product2.png" style="max-width: 128px; max-height: 128px;"></a></div>
-                <div><a href="./product.html?id=3"><img src="../../images/product3.png" style="max-width: 128px; max-height: 128px;"></a></div>
+            <div class="other-products" id="other-products">
+                <template id="other-product-template">
+                    <div id="other-product-2"><a><img style="max-width: 128px; max-height: 128px;"></a></div>
+                </template>
             </div>
         </div>
     </main>
