--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -186,6 +186,8 @@
         </nav>
     </footer>
     <!-- END FOOTER -->
+    <script src="../scripts/util-products.js"></script>
+    <script src="../scripts/util-cart.js"></script>
     <script src="../scripts/render-cart.js"></script>
 </body>
 
